--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="log_in">Log In</string>
     <string name="password">Password</string>
     <string name="email">Email</string>
+    <string name="sign_up">Sign Up</string>
 </resources>
