--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,7 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
+    <!--    String for drawer-->
+    <string name="nav_drawer_open">Open nav</string>
+    <string name="nav_drawer_close">Close nav</string>
 </resources>
