--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,13 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
-    <!--    String for drawer-->
+    <!--String for drawer-->
     <string name="nav_drawer_open">Open nav</string>
     <string name="nav_drawer_close">Close nav</string>
+
+
+    <!--Appointment Strings-->
+    <string name="appointment_book_title">Book Appointment</string>
+    <string name="date_select_label">Choose a date</string>
+
 </resources>
